2017-03-09 Michele Pinamonti <michele.pinamonti@gmail.com>
    * IMPORTANT: Binned likelihood option added, which might fix fit instabilities (thanks Daiki)
    * Adding small options: no ratio plot (thanks Robert Wolff) and others
    
2017-02-28 Michele Pinamonti <michele.pinamonti@gmail.com>
    * various merge requests + few small cosmetics
    
2017-01-31 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixing y axis range issues + few small cosmetics
    
2017-01-19 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Post-fit summary plot bug fixed
    * Pruning.root warning removed TTHFITTER-100
    
2017-01-18 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Setup script back to a working version TTFITTER-98
    * Fixed missing MC stat error in summary plot TTFITTER-99
    * options Sample->DivideBy and MultiplyBy now operational
    
2016-12-14 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Added configurable y axis tange per region
    
2016-10-27 Loic Valery <lvalery@cern.ch>
    * Slight change in the setup for the automatic build in Git
    * Adding lots of Git stuff in the package (README.rst, .gitignore, ...)

2016-11-07 Thomas Calvet <calvet@cppm.in2p3.fr>
    * Fix automatic binning for histo inputs with Julian's correction
    
2016-11-07 Thomas Calvet <calvet@cppm.in2p3.fr>
    * Adding gammas in the ranking. Can choose the plot style, see README "RankingPlot" option for Job
    * Fixed "StatOnly: TRUE" now correctly exclude MC stat when fitting (not added for limit and sig yet)
    
2016-08-31 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixed bug causing crash when drawing regions with 0 data events

2016-07-28 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Nominal smoothing stat uncertainty fixed
    * Few additional options for MultiFit
    * Small fixes toward ICHEP
    
2016-07-21 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixed stat uncertainty for nominal smoothing